fixed timeline responsiveness on mobile

--- a/_sass/pages/_timeline.scss
+++ b/_sass/pages/_timeline.scss
@@ -1,12 +1,14 @@
 .node-container {
     padding: $spacing-unit 0;
-    .flexbox {
+    .timeline-flexbox {
         display: flex;
         align-items: center;
         .node {
             z-index: 2;
             height: 48px;
             width: 48px;
+            min-height: 48px;
+            min-width: 48px;
             border-radius: 50%;
             background-color: $brand-color-dark;
         }
@@ -37,7 +39,7 @@
 
 .timeline-container {
     .timeline {
-        margin-top: $spacing-unit * 1.5;
+        // margin-top: $spacing-unit * 1.5;
         margin-left: 14px;
         border-bottom-right-radius: 10px;
         border-bottom-left-radius: 10px;
